issue #166: layout bug of overflowing code blocks

--- a/src/base/base.scss
+++ b/src/base/base.scss
@@ -52,4 +52,5 @@ img {
 pre {
   max-width: 100%;
   overflow: auto;
+  white-space: pre-wrap;
 }
